# amo_lean

./: .gitignore  ARCHITECTURE.md  AmoLean.lean  BENCHMARKS.md  Bench.lean  Bloque_central_plan.md  CLAUDE.md  CONTEXT_RESUME.md  Compile.lean  FAQ.md  HANDOFF_FASE26.md  README.md  RELEASE_NOTES.md  TASKS_COMPLETED.md  THEOREMS.md  TRZK.lean  TRZKGen.lean  TRZK_codegen_insights.md  TRZK_filosofico.md  TRZK_filosofico2.md  TRZK_interaction_fix_insights.md  TRZK_lowerNTT_insights.md  TRZK_rust_insights.md  Tests.lean  amo-lean-bench-bowers-v2.md  amo-lean-bench-bowers.md  amo-lean-bench-c-v2.md  amo-lean-bench-c.md  amo-lean-bench-rust.md  amo-lean-bitwise.md  amo-lean-bridge-insights.md  amo-lean-closure.md  amo-lean-context.md  amo-lean-creativity.md  amo-lean-results1.md  amo-lean-ultra.md  amo-lean_upgrade_context.md  amo-lean_v2.0.0.md  amo-lean_v2.6_insights.md  amo-lean_v2.7_insights.md  (+28 more)
AmoLean/: Backends.lean  CodeGen.lean  CompileSpec.lean  Correctness.lean  Demo.lean  FullPipeline.lean  NTT.lean  Spec.lean
Bench/: NTT_Math.lean
TRZK/: ArithExpr.lean  ArithOp.lean  Emit.lean  Pipeline.lean  Rule.lean
Tests/: ArithExpr.lean  Bridge.lean  Canary426.lean  Emit.lean  Pipeline.lean  PipelineSoundnessTest.lean  TrustLeanIntegration.lean  VerifiedCodeGenE2E.lean  VerifiedEGraphTest.lean  VerifiedOptimizedNTTE2E.lean  VerifiedProductionE2E.lean  egraph_end_to_end.lean  egraph_optimal_reduce.lean  egraph_selects_strategy.lean  emit_bowers_rust.lean
Tests/interop/bench_field_arith/: Cargo.toml  main.rs
Tests/interop/bench_native_rust/: Cargo.toml  main.rs
(+453 files in other folders)
